--- a/config.toml
+++ b/config.toml
@@ -35,3 +35,7 @@ Paginate = 10 # this is set low for demonstrating with dummy content. Set to a h
   # choose a background color from any on this page: https://tachyons.io/docs/themes/skins/ and preface it with "bg-"
   background_color_class = "bg-dark-blue"
   recent_posts_number = 3
+
+[[params.ananke_socials]]
+name = "linkedin"
+url = "https://linkedin.com/in/lucas-fernandes-aguiar"
