Publish: Creating AI Assistant

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,4 +1,6 @@
 {
-  "accentColor": "",
-  "theme": "system"
+  "accentColor": "#000000",
+  "theme": "system",
+  "textFontFamily": "Times New Roman",
+  "baseFontSize": 19
 }
