--- a/config.toml
+++ b/config.toml
@@ -7,8 +7,8 @@ resourceDir = "../resources"
 DefaultContentLanguage = "en"
 SectionPagesMenu = "main"
 Paginate = 10 # this is set low for demonstrating with dummy content. Set to a higher number
-#googleAnalytics = ""
-#enableRobotsTXT = true
+googleAnalytics = ""
+enableRobotsTXT = true
 
 [languages]
   [languages.en]
@@ -33,7 +33,7 @@ Paginate = 10 # this is set low for demonstrating with dummy content. Set to a h
   site_logo = ""
   description = "The last theme you'll ever need. Maybe."
   # choose a background color from any on this page: https://tachyons.io/docs/themes/skins/ and preface it with "bg-"
-  background_color_class = "bg-dark-blue"
+  background_color_class = "black"
   recent_posts_number = 3
 
 [[params.ananke_socials]]
