--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://lucasaguiar.xyz"
 languageCode = "en-us"
 title = "Lucas F. Aguiar"
-theme = "ananke"
+theme = ["github.com/theNewDynamic/gohugo-theme-ananke"]
 resourceDir = "../resources"
 
 DefaultContentLanguage = "en"
@@ -33,7 +33,7 @@ enableRobotsTXT = true
   site_logo = ""
   description = "The last theme you'll ever need. Maybe."
   # choose a background color from any on this page: https://tachyons.io/docs/themes/skins/ and preface it with "bg-"
-  background_color_class = "black"
+  background_color_class = "bg-black"
   recent_posts_number = 3
 
 [[params.ananke_socials]]
@@ -41,4 +41,3 @@ name = "linkedin"
 url = "https://linkedin.com/in/lucas-fernandes-aguiar"
 #github = "github"
 #githuburl = "https://github.com/isfttr"
-
