--- a/config.toml
+++ b/config.toml
@@ -31,14 +31,14 @@ enableRobotsTXT = true
   text_color = ""
   author = ""
   favicon = ""
-  site_logo = "https://download.logo.wine/logo/OneDrive/OneDrive-Logo.wine.png"
+  site_logo = ""
   description = ""
   # choose a background color from any on this page: https://tachyons.io/docs/themes/skins/ and preface it with "bg-"
   background_color_class = "bg-black"
   recent_posts_number = 3
 
 [[params.ananke_socials]]
-name = "linkedin"
-url = "https://linkedin.com/in/lucas-fernandes-aguiar"
+#name = "linkedin"
+#url = "https://linkedin.com/in/lucas-fernandes-aguiar"
 github = "github"
 githuburl = "https://github.com/isfttr"
