--- a/config.toml
+++ b/config.toml
@@ -37,6 +37,12 @@ enableRobotsTXT = true
   background_color_class = "bg-black"
   recent_posts_number = 3
 
+[taxonomies]
+author = ""
+category = "categories"
+tag = "tags"
+
+
 [[params.ananke_socials]]
 #linkedin = "linkedin"
 #linkedinurl = "https://linkedin.com/in/lucas-fernandes-aguiar"
