--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ resourceDir = "../resources"
 
 DefaultContentLanguage = "en"
 SectionPagesMenu = "main"
-Paginate = 10 # this is set low for demonstrating with dummy content. Set to a higher number
+Paginate = 6 # this is set low for demonstrating with dummy content. Set to a higher number
 googleAnalytics = ""
 enableRobotsTXT = true
 
@@ -32,7 +32,7 @@ enableRobotsTXT = true
   author = "Lucas F. Aguiar"
   favicon = "/favicons/favicon-32x32.png"
   site_logo = ""
-  description = ""
+  description = "Personal blog."
   # choose a background color from any on this page: https://tachyons.io/docs/themes/skins/ and preface it with "bg-"
   background_color_class = "bg-black"
   recent_posts_number = 3
