--- a/config.toml
+++ b/config.toml
@@ -7,35 +7,35 @@ resourceDir = "../resources"
 
 DefaultContentLanguage = "en"
 SectionPagesMenu = "main"
-Paginate = 6 # this is set low for demonstrating with dummy content. Set to a higher number
+Paginate = 6                  # this is set low for demonstrating with dummy content. Set to a higher number
 googleAnalytics = ""
 enableRobotsTXT = true
 
 [languages]
-  [languages.en]
-    title = "Home"
-    weight = 1
-    contentDir = "content/en"
-    # languageDirection = 'rtl' for Right-To-Left languages
+[languages.en]
+title = "Home"
+weight = 1
+contentDir = "content/en"
+# languageDirection = 'rtl' for Right-To-Left languages
 #  [languages.fr]
 #    title = "Ananke Fr"
 #    weight = 2
 #    contentDir = "content/fr"
 
 [sitemap]
-  changefreq = "monthly"
-  priority = 0.5
-  filename = "sitemap.xml"
+changefreq = "monthly"
+priority = 0.5
+filename = "sitemap.xml"
 
 [params]
-  text_color = ""
-  author = "Lucas F. Aguiar"
-  favicon = "/favicons/favicon-32x32.png"
-  site_logo = ""
-  description = "Personal blog."
-  # choose a background color from any on this page: https://tachyons.io/docs/themes/skins/ and preface it with "bg-"
-  background_color_class = "bg-black"
-  recent_posts_number = 3
+text_color = ""
+author = "Lucas Fernandes Aguiar"
+favicon = "/favicons/favicon-32x32.png"
+site_logo = ""
+description = "Personal blog."
+# choose a background color from any on this page: https://tachyons.io/docs/themes/skins/ and preface it with "bg-"
+background_color_class = "bg-black"
+recent_posts_number = 3
 
 [taxonomies]
 category = "categories"
@@ -49,4 +49,14 @@ tag = "tags"
 #githuburl = "https://github.com/isfttr"
 name = "github"
 url = "https://github.com/isfttr"
+label = "GitHub"
 
+[[params.ananke_socials]]
+name = "linkedin"
+url = "https://linkedin.com/in/lucas-fernandes-aguiar"
+label = "LinkedIn"
+
+[[params.ananke_socials]]
+name = "threads"
+url = "https://www.threads.net/@lucas.chem"
+label = "Threads"
