draft: obsidian copilot

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,6 +1,6 @@
 {
-  "accentColor": "#000000",
+  "accentColor": "",
   "theme": "system",
-  "textFontFamily": "Times New Roman",
+  "textFontFamily": "",
   "baseFontSize": 19
 }
