--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.7.1",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@release-it/conventional-changelog": "^10.0.0",
     "lint": "^1.1.2",
     "test": "^3.3.0"
