--- a/config.toml
+++ b/config.toml
@@ -65,3 +65,6 @@ label = "Threads"
   [markup.tableOfContents]
     startLevel = 2
     endLevel = 6
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
