feat(content): Add URL to anthropic paper post
chore(config): Increase TOC levels and enable unsafe HTML

This commit includes two main changes:

1. It adds the `url` field to the frontmatter of the "Inside AI Brains: How
   Anthropic Decoded Claude's Thinking Process" blog post, which was previously
   missing.

2. It updates the `config.toml` file to increase the table of contents (TOC)
   levels from 2-6 to 2-6, and enables the `unsafe` option for the Goldmark
   renderer, allowing the use of unsafe HTML in the Markdown content.

These changes are intended to improve the functionality and presentation of the
blog post and the overall website configuration.

--- a/config.toml
+++ b/config.toml
@@ -4,14 +4,15 @@ title = "Lucas F. Aguiar"
 themesDir = "themes"
 theme = "gohugo-theme-ananke"
 resourceDir = "../resources"
+buildFuture = true
 
 DefaultContentLanguage = "en"
-SectionPagesMenu = "main"                # this is set low for demonstrating with dummy content. Set to a higher number
+SectionPagesMenu = "main"     # this is set low for demonstrating with dummy content. Set to a higher number
 googleAnalytics = ""
 enableRobotsTXT = true
 
 [pagination]
-  pagerSize = 6  
+pagerSize = 6
 
 [languages]
 [languages.en]
@@ -64,9 +65,9 @@ url = "https://www.threads.net/@lucas.chem"
 label = "Threads"
 
 [markup]
-  [markup.tableOfContents]
-    startLevel = 2
-    endLevel = 6
-  [markup.goldmark]
-    [markup.goldmark.renderer]
-      unsafe = true
+[markup.tableOfContents]
+startLevel = 2
+endLevel = 6
+[markup.goldmark]
+[markup.goldmark.renderer]
+unsafe = true
